- Option for middle-click tab close in wxAuiNotebook (Ben Williams).
- Added wxAuiNotebook::SetFont, GetTabCtrlHeight, GetHeightForPageHeight.
- Added SetBitmap/GetBitmap to wxWizard, to allow e.g. on-the-fly creation
  of bitmap to fit page height.
- Fixed wxXPMHandler::SaveFile for images with more than 92 colors.
- Fixed a crash in wxGrid on creation due to OnSize being called too soon.

wxMSW:

- Fix crash when destroying a default button (Tim Kosse).
- Correct problem with page setup dialog when using landscape mode.
- Added msw.font.no-proof-quality system option, see manual for description.
- Fix appearance of notebook with non-top tabs under Windows Vista.
- Fixed bug with symbol resolving in wxStackWalker (Axel Gembe).
- Fixed showing busy cursor for disabled windows and during wxExecute()

wxGTK:

- Fixed missing key events in wxGTK1 build.
- Setting foreground colour of single line wxTextCtrl now works.
- More work on setting defaults in GNOME print dialogs.
- Also made landscape printing work as per wxMSW.
- Add support for (rectangular) clipping in GNOME print backend.
- Speed up wxBitmap::Rescale().
- Add right button event for wxToolbar's tools (Tim Kosse).
- Made wxWindow::SetScrollPos and wxScrollbar::SetThumbPos
  not emit any event.
- Correct hyperactive mouse wheel support.
- Correct grid line mode in wxListCtrl.
- Don't unconditionally add wxCAPTION style to wxMiniFrame.
- Fixed crash in file and dir pickers for GTK+ < 2.6 if compiled
  with GTK+ >= 2.6.
- Generate wxEVT_COMMAND_LIST_END_LABEL_EDIT event even if label didn't change

wxMac:

- Fixed ability of non-native/installed toolbars to have controls,
  in native toolbar compilation mode.

wxMotif:

- Fix crash when using wxStaticBox with empty label


2.8.4
-----

All:

- Fix bug in wxFileConfig when recreating a group (Steven Van Ingelgem).
- Fix wxStringOutputStream::Write() in Unicode build when the argument
  overlaps UTF-8 characters boundary.