@@ -2975,6 +2975,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     src/xrc/xh_notbk.cpp
     src/xrc/xh_odcombo.cpp
     src/xrc/xh_panel.cpp
+    src/xrc/xh_propdlg.cpp
     src/xrc/xh_radbt.cpp
     src/xrc/xh_radbx.cpp
     <!-- disabled until linking problems are fixed -->
@@ -3035,6 +3036,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     wx/xrc/xh_notbk.h
     wx/xrc/xh_odcombo.h
     wx/xrc/xh_panel.h
+    wx/xrc/xh_propdlg.h
     wx/xrc/xh_radbt.h
     wx/xrc/xh_radbx.h
     <!-- wx/xrc/xh_richtext.h -->
