@@ -1051,6 +1051,7 @@ XRCDLL_OBJECTS =  \
 	$(OBJS)\xrcdll_xh_notbk.obj \
 	$(OBJS)\xrcdll_xh_odcombo.obj \
 	$(OBJS)\xrcdll_xh_panel.obj \
+	$(OBJS)\xrcdll_xh_propdlg.obj \
 	$(OBJS)\xrcdll_xh_radbt.obj \
 	$(OBJS)\xrcdll_xh_radbx.obj \
 	$(OBJS)\xrcdll_xh_scrol.obj \
@@ -1118,6 +1119,7 @@ XRCLIB_OBJECTS =  \
 	$(OBJS)\xrclib_xh_notbk.obj \
 	$(OBJS)\xrclib_xh_odcombo.obj \
 	$(OBJS)\xrclib_xh_panel.obj \
+	$(OBJS)\xrclib_xh_propdlg.obj \
 	$(OBJS)\xrclib_xh_radbt.obj \
 	$(OBJS)\xrclib_xh_radbx.obj \
 	$(OBJS)\xrclib_xh_scrol.obj \
@@ -1442,6 +1444,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_xh_notbk.obj \
 	$(OBJS)\monodll_xh_odcombo.obj \
 	$(OBJS)\monodll_xh_panel.obj \
+	$(OBJS)\monodll_xh_propdlg.obj \
 	$(OBJS)\monodll_xh_radbt.obj \
 	$(OBJS)\monodll_xh_radbx.obj \
 	$(OBJS)\monodll_xh_scrol.obj \
@@ -2064,6 +2067,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_xh_notbk.obj \
 	$(OBJS)\monolib_xh_odcombo.obj \
 	$(OBJS)\monolib_xh_panel.obj \
+	$(OBJS)\monolib_xh_propdlg.obj \
 	$(OBJS)\monolib_xh_radbt.obj \
 	$(OBJS)\monolib_xh_radbx.obj \
 	$(OBJS)\monolib_xh_scrol.obj \
@@ -5503,6 +5507,9 @@ $(OBJS)\monodll_xh_odcombo.obj: ..\..\src\xrc\xh_odcombo.cpp
 $(OBJS)\monodll_xh_panel.obj: ..\..\src\xrc\xh_panel.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
 
+$(OBJS)\monodll_xh_propdlg.obj: ..\..\src\xrc\xh_propdlg.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
+
 $(OBJS)\monodll_xh_radbt.obj: ..\..\src\xrc\xh_radbt.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) $**
 
@@ -7498,6 +7505,9 @@ $(OBJS)\monolib_xh_odcombo.obj: ..\..\src\xrc\xh_odcombo.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_xh_panel.obj: ..\..\src\xrc\xh_panel.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
+
+$(OBJS)\monolib_xh_propdlg.obj: ..\..\src\xrc\xh_propdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_xh_radbt.obj: ..\..\src\xrc\xh_radbt.cpp
@@ -12560,6 +12570,9 @@ $(OBJS)\xrcdll_xh_odcombo.obj: ..\..\src\xrc\xh_odcombo.cpp
 $(OBJS)\xrcdll_xh_panel.obj: ..\..\src\xrc\xh_panel.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(XRCDLL_CXXFLAGS) $**
 
+$(OBJS)\xrcdll_xh_propdlg.obj: ..\..\src\xrc\xh_propdlg.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(XRCDLL_CXXFLAGS) $**
+
 $(OBJS)\xrcdll_xh_radbt.obj: ..\..\src\xrc\xh_radbt.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(XRCDLL_CXXFLAGS) $**
 
@@ -12726,6 +12739,9 @@ $(OBJS)\xrclib_xh_odcombo.obj: ..\..\src\xrc\xh_odcombo.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(XRCLIB_CXXFLAGS) $**
 
 $(OBJS)\xrclib_xh_panel.obj: ..\..\src\xrc\xh_panel.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(XRCLIB_CXXFLAGS) $**
+
+$(OBJS)\xrclib_xh_propdlg.obj: ..\..\src\xrc\xh_propdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(XRCLIB_CXXFLAGS) $**
 
 $(OBJS)\xrclib_xh_radbt.obj: ..\..\src\xrc\xh_radbt.cpp
