@@ -1,0 +1,36 @@
+/////////////////////////////////////////////////////////////////////////////
+// Name:        wx/xrc/xh_propdlg.h
+// Purpose:     XML resource handler for wxPropertySheetDialog
+// Author:      Sander Berents
+// Created:     2007/07/12
+// RCS-ID:      $Id$
+// Copyright:   (c) 2007 Sander Berents
+// Licence:     wxWindows licence
+/////////////////////////////////////////////////////////////////////////////
+
+#ifndef _WX_XH_PROPDLG_H_
+#define _WX_XH_PROPDLG_H_
+
+#include "wx/xrc/xmlres.h"
+
+#if wxUSE_XRC
+
+class WXDLLEXPORT wxPropertySheetDialog;
+
+class WXDLLIMPEXP_XRC wxPropertySheetDialogXmlHandler : public wxXmlResourceHandler
+{
+    DECLARE_DYNAMIC_CLASS(wxPropertySheetDialogXmlHandler)
+
+public:
+    wxPropertySheetDialogXmlHandler();
+    virtual wxObject *DoCreateResource();
+    virtual bool CanHandle(wxXmlNode *node);
+
+private:
+    bool m_isInside;
+    wxPropertySheetDialog *m_dialog;
+};
+
+#endif // wxUSE_XRC
+
+#endif // _WX_XH_PROPDLG_H_
